--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "title": "SB Admin 2",
+    "title": "Joburg Water Admin",
     "name": "startbootstrap-sb-admin-2",
     "version": "4.1.4",
     "scripts": {
+        "preinstall": "npx npm-force-resolutions",
         "start": "node_modules/.bin/gulp watch"
     },
     "description": "An open source Bootstrap 4 admin theme.",
@@ -32,23 +33,31 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.15.3",
+        "body-parser": "^1.20.2",
         "bootstrap": "4.6.0",
         "chart.js": "2.9.4",
-        "datatables.net-bs4": "1.10.24",
+        "cors": "^2.8.5",
+        "datatables.net-bs4": "^1.13.4",
+        "express": "^4.18.2",
         "jquery": "3.6.0",
-        "jquery.easing": "^1.4.1"
+        "jquery.easing": "^1.4.1",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
-        "browser-sync": "2.26.14",
+        "browser-sync": "^2.29.3",
         "del": "6.0.0",
-        "gulp": "4.0.2",
-        "gulp-autoprefixer": "7.0.1",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^6.1.0",
         "gulp-clean-css": "4.3.0",
         "gulp-header": "2.0.9",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "2.0.0",
-        "gulp-sass": "4.1.0",
+        "gulp-sass": "^5.1.0",
         "gulp-uglify": "3.0.2",
-        "merge-stream": "2.0.0"
+        "merge-stream": "2.0.0",
+        "sass": "^1.62.1"
+    },
+    "resolutions": {
+        "graceful-fs": "^4.2.11"
     }
 }
